--- a/style.css
+++ b/style.css
@@ -4855,6 +4855,7 @@ textarea {
         margin-top: 28px !important;
         width: 90vw;
         line-height: 1.1 !important;
+        letter-spacing: 1.5% !important;
     }
 
     .h2-h3{
