--- a/style.css
+++ b/style.css
@@ -477,6 +477,8 @@ width: 50vw;
     margin-top: 26px !important;
     text-transform: uppercase;
     margin-bottom: 6px;
+    text-align: left !important;
+    width: 90vw;
 }
 
 .h2-h3-2{
@@ -4009,11 +4011,15 @@ textarea {
 
     .hero-left h4{
         margin-bottom: 20px;
+        text-align: left !important;
+        width: 90vw;
     }
 
     .hero-left h3{
         margin-top: 20px;
         margin-bottom: 78px;
+        text-align: left !important;
+        width: 90vw;
     }
 
     .hero-left h2{
@@ -4030,15 +4036,17 @@ textarea {
         margin-left: 0px;
         margin-bottom: 0px;
         transform: translateY(26px);
+        width: 93vw;
     }
 
     .button-container button{
         box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
         padding: 20px 32px 20px 32px !important;  
+        width: 36vw;
     }
 
     .z-index{
-        margin-top: 12px;
+        margin-top: 18px;
         align-items: center;
         width: 100vw;
     }
@@ -4061,7 +4069,7 @@ textarea {
     }
 
     .button-container a{
-        width: 192px;
+        width: 50vw;
         margin-right: 12px;
         box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.1);
         padding: 20px 32px 20px 32px !important;
@@ -4846,16 +4854,17 @@ textarea {
     }
 
     .h3-h1{
-        font-size: 12vw !important;
+        font-size: 11vw !important;
         margin: 0px !important;
     }
 
     .h1-h2{
-        font-size: 8.75vw !important;
-        margin-top: 20px !important;
+        font-size: 8vw !important;
+        margin-top: 16px !important;
         width: 90vw;
         line-height: 1.1 !important;
         letter-spacing: 1.5% !important;
+        text-align: left !important;
     }
 
     .h2-h3{
