--- a/style.css
+++ b/style.css
@@ -409,7 +409,7 @@ h1{
     letter-spacing: 1%;
     line-height: 1.1;
     color: #ffffff;
-    margin-top: 13vh;
+    margin-top: 14vh;
     max-width: 720px;
     width: 50vw;
 }
@@ -1471,7 +1471,7 @@ button {
     background-color: #B6DB91;
     padding: 18px 32px 18px 32px;
     border-radius: 99px;;
-    margin-right: 12px;
+    margin-right: 15px;
     transition: 0.3s;
 }
 
@@ -1970,7 +1970,7 @@ body.modal-open {
 }
 
 .hero-left button{
-    padding: 19px 36px 19px 36px;
+    padding: 21px 38px;
 }
 
 .mail-container{
